Fix overflow content

--- a/sass/blocks/about.scss
+++ b/sass/blocks/about.scss
@@ -96,7 +96,7 @@
 
 .about__icon-feature-1 {
   position: absolute;
-  bottom: 58px;
+  top: 26px;
   left: 8px;
 
   width: 32px;
@@ -107,7 +107,7 @@
 
 .about__icon-feature-2 {
   position: absolute;
-  bottom: 66px;
+  top: 29px;
   left: 0;
 
   width: 47px;
@@ -118,7 +118,7 @@
 
 .about__icon-feature-3 {
   position: absolute;
-  bottom: 60px;
+  top: 34px;
   left: 7px;
 
   width: 33px;
@@ -129,8 +129,8 @@
 
 .about__icon-feature-4 {
   position: absolute;
-  bottom: 57px;
-  left: 7px;
+  top: 33px;
+  left: 3px;
 
   width: 34px;
   height: 34px;
@@ -140,8 +140,8 @@
 
 .about__icon-feature-5 {
   position: absolute;
-  bottom: 67px;
-  left: -3px;
+  top: 32px;
+  left: -4px;
 
   width: 54px;
   height: 23px;
@@ -151,8 +151,8 @@
 
 .about__icon-feature-6 {
   position: absolute;
-  bottom: 60px;
-  left: 8px;
+  top: 30px;
+  left: 4px;
 
   width: 33px;
   height: 32px;
